--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -57,7 +57,8 @@
                     android:id="@+id/crearContrasena"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/hint_Pass"/>
+                    android:hint="@string/hint_Pass"
+                    android:inputType="textPassword"/>
 
             </android.support.design.widget.TextInputLayout>
 
@@ -66,7 +67,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/btn_Reg"
-                android:theme="@style/RaisedButton"/>
+                android:theme="@style/RaisedButton"
+                android:onClick="registro"/>
 
         </LinearLayout>
 
