--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -43,5 +43,8 @@
         <item name="android:windowBackground">@drawable/dialog</item>
     </style>
 
-    <dimen name="text_Size_login">22sp</dimen>
+    <style name="SplashTheme" parent="AppTheme">
+        <item name="android:windowBackground">@drawable/splash</item>
+    </style>
+    
 </resources>
